--- a/app/src/main/res/layout/item_diary_main.xml
+++ b/app/src/main/res/layout/item_diary_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
+        android:alpha="0.9"
         style="@style/AppCard">
         <LinearLayout
             style="@style/LinearLayoutVertical">
