--- a/app/src/main/res/layout/fragment_diary_read.xml
+++ b/app/src/main/res/layout/fragment_diary_read.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
+        android:alpha="0.9"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="@dimen/card_layout_margin"
